     back the changes due to the bug report of Kris Strecker).
   - Removed an old left over _DETAIL define depended code (for debugging)
     in IOGrunt.cpp.
- Documentation:
   - Added first comments about porting the Dynamo part to the Developers
     Guide.
   - Added first comments about the coding style to the Developers Guide.
- Others:
   - Modified the Iometer icon to use the new black one instead of the
     old color lightning/spectrum thing.
   - Added an installer for Iometer on Windows (based on the Nullsoft
     Scriptable Install System - NSIS).
   - Changed the Registry Key for the Windows GUI to "iometer.org".
   - Modified the About dialog to reflect the Open Source status of Iometer.
   - Changed the license of the iomtr_kstat module to the GPL.
   - Added md5sum's for each package to the project homepage.
   - Extended the build environment with capabilities to handle Java.



ChangeLog (2003.12.16):
=======================

- Applied patches:
   - iometer-2003.05.10-IoMtrGlobalDefines4.patch by Daniel Scheibli
     (Last of the IOMTR_* global defines patches)
   - iometer_large_work_file.patch.txt by Russell Redd (fixes the GUI 
     to ensure that "Maximum Disk Size" values are handled propably)
   - iometer-2003.05.10-IoMtrGlobalDefines3.patch by Daniel Scheibli
     (introduces the IOMTR_* global defines to consolidate the different
     global defines coming with the different platforms - ease future
     ports).
   - iometer-2003.05.10-Win64OnAmd64.patch by Daniel Scheibli (Integrates
     the changes contributed by Vedran Degoricija to ensure, that the
     executables can be build for Windows 64 Bit on AMD64).
   - Patch provided by Robert H Creecy to fix the segmentation fault which
     happened when running on Solaris while having multiple swap devices
     configured.
   - Patch provided by Sander Pool to get the Iometer "truly batch
     oriented".
   - iometer-2003.05.10-UsingDdkAndWin64.patch by Daniel Scheibli